--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             </div>
             <div class="col-md-6 gameplay-column">
-                <h2>Press Any Key to Get Started!</h2>
+                <h2>Press Any Letter to Get Started!</h2>
                 <h4>Wins</h4>
                 <h5 id="totalWins"></h5>
                 <h4>Current Word</h4>
